generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum PackagingType {
  BIODEGRADABLE
  COMPOSTABLE
  REUSABLE
}

enum DeliveryMethod {
  BICYCLE
  ELECTRIC_VEHICLE
}

enum RestaurantStatus {
  ACTIVE
  INACTIVE
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PREPARING
  IN_DELIVERY
  DELIVERED
  CANCELLED
}

model User {
  userId       String   @id @default(uuid()) @map("user_id") @db.Uuid
  name         String
  email        String   @unique
  passwordHash String   @map("password_hash")
  registeredAt DateTime @default(now()) @db.Timestamptz(6) @map("registered_at")
  orders       Order[]

  @@map("users")
}

model Restaurant {
  restaurantId            String           @id @default(uuid()) @map("restaurant_id") @db.Uuid
  name                    String
  packagingType           PackagingType    @map("packaging_type")
  availableDeliveryMethod DeliveryMethod    @map("available_delivery_method")
  status                  RestaurantStatus
  sustainabilityIndicator String           @map("sustainability_indicator")
  products                Product[]
  orders                  Order[]

  @@map("restaurants")
}

model Product {
  productId    String      @id @default(uuid()) @map("product_id") @db.Uuid
  restaurantId String      @map("restaurant_id") @db.Uuid
  name         String
  price        Decimal     @db.Decimal(10, 2)
  restaurant   Restaurant  @relation(fields: [restaurantId], references: [restaurantId])
  orderItems   OrderItem[]

  @@index([restaurantId])
  @@map("products")
}

model Order {
  orderId             String         @id @default(uuid()) @map("order_id") @db.Uuid
  userId              String         @map("user_id") @db.Uuid
  restaurantId        String         @map("restaurant_id") @db.Uuid
  orderedAt           DateTime       @default(now()) @db.Timestamptz(6) @map("ordered_at")
  totalAmount         Decimal        @db.Decimal(10, 2) @map("total_amount")
  distanceKm          Decimal        @db.Decimal(6, 2) @map("distance_km")
  deliveryMethod      DeliveryMethod @map("delivery_method")
  packagingType       PackagingType  @map("packaging_type")
  orderStatus         OrderStatus    @map("order_status")
  co2SavedKg          Decimal        @db.Decimal(6, 3) @map("co2_saved_kg")
  plasticItemsAvoided Int            @map("plastic_items_avoided")
  deliveryLatitude    Decimal        @map("delivery_latitude")
  user                User           @relation(fields: [userId], references: [userId])
  restaurant          Restaurant     @relation(fields: [restaurantId], references: [restaurantId])
  items               OrderItem[]

  @@index([userId])
  @@index([restaurantId])
  @@map("orders")
}

model OrderItem {
  orderItemId String  @id @default(uuid()) @map("order_item_id") @db.Uuid
  orderId     String  @map("order_id") @db.Uuid
  productId   String  @map("product_id") @db.Uuid
  quantity    Int
  unitPrice   Decimal @db.Decimal(10, 2) @map("unit_price")
  subtotal    Decimal @db.Decimal(10, 2)
  order       Order   @relation(fields: [orderId], references: [orderId])
  product     Product @relation(fields: [productId], references: [productId])

  @@index([orderId])
  @@index([productId])
  @@map("order_items")
}
